Map with defaults injection done. Some bugs fixed.